# soap-server

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  release-please-config.json
crossref/: Cargo.toml  README.md  docker-compose.local.yml  docker-compose.yml  manifest.toml
crossref/comparators/: controlled-server.Dockerfile
crossref/comparators/cxf/: Dockerfile  pom.xml
crossref/comparators/cxf-client/: Dockerfile  pom.xml
crossref/comparators/oracle/: Dockerfile  SCHEMAS.md  pom.xml
crossref/comparators/zeep-client/: Dockerfile  client.py  requirements.txt
crossref/fixtures/: controlled.wsdl  multi_service.wsdl
crossref/scenarios/: doc_literal_named_missing.request.xml  doc_literal_named_missing.toml  doc_literal_named_present.request.xml  doc_literal_named_present.toml  interop_cxf_echo.toml  interop_zeep_echo.toml  ns_on_body.request.xml  ns_on_body.toml  ns_on_envelope.request.xml  ns_on_envelope.toml  ns_on_header.request.xml  ns_on_header.toml  ns_on_nested_payload.request.xml  ns_on_nested_payload.toml  ns_on_operation.request.xml  ns_on_operation.toml  ns_prefix_shadowing.request.xml  ns_prefix_shadowing.toml  op_echo_empty_text.request.xml  op_echo_empty_text.toml  op_echo_missing_required.request.xml  op_echo_missing_required.toml  op_echo_special_chars.request.xml  op_echo_special_chars.toml  op_echo_success.request.xml  op_echo_success.toml  raw_xml_child.request.xml  raw_xml_child.toml  soap11_echo_success.request.xml  soap11_echo_success.toml  soap11_fault.request.xml  soap11_fault.toml  soap11_named_present.request.xml  soap11_named_present.toml  wsdl_get.request.xml  wsdl_rewrite_multi.toml  wsdl_rewrite_single.toml  wssec_bad_password.request.xml  wssec_bad_password.toml  wssec_digest_success.request.xml  (+7 more)
crossref/snapshots/: doc_literal_named_missing.xml  doc_literal_named_present.xml  ns_on_body.xml  ns_on_envelope.xml  ns_on_header.xml  ns_on_nested_payload.xml  ns_on_operation.xml  ns_prefix_shadowing.xml  op_echo_empty_text.xml  op_echo_missing_required.xml  op_echo_special_chars.xml  op_echo_success.xml  raw_xml_child.xml  soap11_echo_success.xml  soap11_fault.xml  soap11_named_present.xml  status.toml  wsdl_rewrite_multi.xml  wsdl_rewrite_single.xml  wssec_digest_success.xml  wssec_missing_auth.xml  wssec_stale_timestamp.xml  wssec_wrong_username.xml
crossref/snapshots/canonical/: doc_literal_named_present.c14n  interop_cxf_echo.c14n  interop_zeep_echo.c14n  ns_on_body.c14n  ns_on_envelope.c14n  ns_on_header.c14n  ns_on_nested_payload.c14n  ns_on_operation.c14n  ns_prefix_shadowing.c14n  op_echo_empty_text.c14n  op_echo_special_chars.c14n  op_echo_success.c14n  raw_xml_child.c14n  soap11_echo_success.c14n  soap11_fault.c14n  (+5 more)
crossref/src/: handlers.rs  lib.rs  mask_rules.rs  normalize.rs  oracle.rs  scenario.rs  snapshot.rs  sut.rs
crossref/tests/: layer1_replay.rs
(+126 files in other folders)
