[package]
name = "soap-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A spec-compliant SOAP 1.2 server library for Rust with ONVIF support"

[dependencies]
roxmltree = "0.21"
quick-xml = { version = "0.39", features = ["async-tokio"] }
axum = "0.8"
tokio = { version = "1", features = ["sync"] }
sha1 = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["std"], default-features = false }
thiserror = "2"
bytes = "1"
http-body-util = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
axum-test = "20"
