[package]
name = "soap-server"
version = "0.1.1"
edition = "2021"
rust-version = "1.85.1"
authors = ["Joshua Hogendorn <jhogendorn@gmail.com>", "NavistAu"]
license = "MIT OR Apache-2.0"
description = "A WSDL-driven, spec-compliant SOAP 1.1/1.2 server library for Rust with WS-Security and ONVIF support"
readme = "README.md"
repository = "https://github.com/NavistAu/soap-server"
homepage = "https://github.com/NavistAu/soap-server"
documentation = "https://docs.rs/soap-server"
keywords = ["soap", "wsdl", "onvif", "ws-security", "axum"]
categories = ["web-programming::http-server", "network-programming"]
# Allowlist exactly what ships in the published crate (nothing leaks by default).
# cargo also auto-adds Cargo.toml.orig, Cargo.lock, and .cargo_vcs_info.json.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
roxmltree = "0.21"
quick-xml = { version = "0.39", features = ["async-tokio"] }
axum = "0.8"
tokio = { version = "1", features = ["sync"] }
sha1 = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
thiserror = "2"
bytes = "1"
http-body-util = "0.1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
subtle = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
axum-test = "20"

[workspace]
members = ["crossref"]
