[package]
name = "crossref"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
soap-server = { path = ".." }
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bytes = "1"
axum-test = "20"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
similar-asserts = "1"
